--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="card-body">
         <fieldset class="fieldset">
           <label class="label text-neutral font-bold">Mobile Number</label>
-          <input id="login-input" type="text" maxlength="11" minlength="11" class="input rounded-full bg-base-200" placeholder="Enter 11 digits Number" />
+          <input id="login-input" type="text" maxlength="11" minlength="11" class="input rounded-full bg-base-200" value="01234567890" placeholder="Enter 11 digits Number" />
 
           <br>
           <label class="label text-neutral font-bold">4 Digit Pin</label>
