--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
         <section class="w-11/12 mx-auto py-3 flex justify-between items-center">
             <div class="left flex gap-1 ">
                 <div class="logo w-[60px]">
-                    <img src="./assets/logo.png" alt="">
+                    <img src="assets/logo.png" alt="">
                 </div>
                 <div class="balance-info">
                     <h2 class="text-2xl font-bold">$ <span id="balance">45000</span></h2>
@@ -51,32 +51,32 @@
 
         <div class="buttons grid grid-cols-3 gap-3">
             <button onclick="showOnly('add-money-section')" class="btn flex-col h-full py-[20px] btn-soft">
-                <img src="./assets/opt-1.png" alt="">
+                <img src="assets/opt-1.png" alt="">
                 <p class="text-primary">Add Money</p>
             </button>
 
             <button onclick="showOnly('cash-out-section')" class="btn flex-col h-full py-[20px] btn-soft">
-                <img src="./assets/opt-2.png" alt="">
+                <img src="assets/opt-2.png" alt="">
                 <p class="text-primary">Cash Out</p>
             </button>
 
             <button onclick="showOnly('send-money-section')" class="btn flex-col h-full py-[20px] btn-soft">
-                <img src="./assets/opt-3.png" alt="">
+                <img src="assets/opt-3.png" alt="">
                 <p class="text-primary">Send Money</p>
             </button>
 
             <button onclick="showOnly('get-bonus-section')" class="btn flex-col h-full py-[20px] btn-soft">
-                <img src="./assets/opt-4.png" alt="">
+                <img src="assets/opt-4.png" alt="">
                 <p class="text-primary">Get Bonus</p>
             </button>
 
             <button onclick="showOnly('pay-bill-section')" class="btn flex-col h-full py-[20px] btn-soft">
-                <img src="./assets/opt-5.png" alt="">
+                <img src="assets/opt-5.png" alt="">
                 <p class="text-primary">Pay Bill</p>
             </button>
 
             <button onclick="showOnly('history')" class="btn flex-col h-full py-[20px] btn-soft">
-                <img src="./assets/opt-6.png" alt="">
+                <img src="assets/opt-6.png" alt="">
                 <p class="text-primary">Transaction</p>
             </button>
 
